<resources>
    <string name="app_name">BookHunter</string>
    <string name="home_bottomnav">Home</string>
    <string name="website_bottomnav">Websites</string>
    <string name="keyword_bottomnav">Keywords</string>
    <string name="change_account">Change Account</string>
    <string name="about_app">About</string>
    <string name="hunt_button">Search</string>
    <string name="test">Test</string>
    <string name="hint_website">add website</string>
    <string name="Website_title">Websites</string>
    <string name="hint_keyword">add keyword</string>
    <string name="Keyword_title">Keywords</string>
    <string name="Submit">Submit</string>
    <string name="Finds_title">Finds</string>
    <string name="time_text">notify me every: </string>
    <string name="http">http://</string>
    <string name="Login">Login</string>
    <string name="notLogin">Not Logged in</string>
    <string name="Loading">Loading</string>
    <string name="procent">0%</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="incorrect">incorrect email or password</string>


    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_password">Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>


    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="continue1">continue</string>
    <string name="restart">restart app</string>
    <string name="description">image</string>
    <string name="icon">icon</string>


</resources>
